# components/membership/membership-rest/src/main/kotlin/net/corda/membership/rest/v1/MGMRestResource.kt
@@ -1,5 +1,6 @@
 package net.corda.membership.rest.v1
 
+import net.corda.membership.rest.v1.types.RestGroupParameters
 import net.corda.rest.RestResource
 import net.corda.rest.annotations.HttpDELETE
 import net.corda.rest.annotations.HttpGET
@@ -475,4 +476,29 @@ interface MGMRestResource : RestResource {
         )
         activationParams: SuspensionActivationParameters
     )
+
+    /**
+     * The [updateGroupParameters] method allows you to make changes to the group parameters by submitting an updated
+     * version of the group parameters. [newGroupParameters] may only include custom fields (with "ext." prefix) and
+     * minimum platform version. If [newGroupParameters] contains no changes, the current group parameters are returned.
+     *
+     * @see MemberLookupRestResource.viewGroupParameters for how to view the current group parameters for the group.
+     *
+     * @param holdingIdentityShortHash The holding identity ID of the MGM of the membership group.
+     * @param newGroupParameters Group parameters as a [Map] containing the desired changes.
+     *
+     * @return The newly updated group parameters.
+     */
+    @HttpPOST(
+        path = "{holdingIdentityShortHash}/group-parameters",
+        description = "This API allows you to make changes to the group parameters by submitting an updated version " +
+                "of the group parameters.",
+        responseDescription = "The newly updated group parameters"
+    )
+    fun updateGroupParameters(
+        @RestPathParameter(description = "The holding identity ID of the MGM")
+        holdingIdentityShortHash: String,
+        @ClientRequestBodyParameter(description = "Updated version of the group parameters")
+        newGroupParameters: RestGroupParameters,
+    ): RestGroupParameters
 }
